creusot/tests/should_fail/terminates/trait_def_and_impl_disagree.rs
#![allow(unused)]
extern crate creusot_contracts;
use creusot_contracts::*;

trait Tr {
    #[terminates]
    fn f();

    #[pure]
    fn g();

    #[pure]
    fn h();
}

impl Tr for i32 {
    fn f() {}

    #[terminates]
    fn g() {}

    fn h() {}
}
